# BIM-Compliance-Geometric-Reasoning

./: .gitignore  README.md  audit-normalized  audit-unit  ingest-ifc  pyproject.toml  regen-articles  regen-constraints  report-all-units  report-unit  run-demo  test
data/artifacts/normalized_bim/: Duplex_A_20110907_normalized_bim.json  Unit_410_normalized_bim.json  Unit_520_normalized_bim.json
data/artifacts/vector_index/: article_chunks_index.json
data/compliance_corpora/: corpus_manifest.json
data/compliance_corpora/montreal_11_018/: montreal_11_018_articles.json  montreal_11_018_articles_fr.json  montreal_11_018_constraints_official.json
data/compliance_corpora/montreal_11_018_x/: montreal_11_018_x_articles.json  montreal_11_018_x_articles_fr.json  montreal_11_018_x_constraints_official.json
data/compliance_corpora/nbc_2020/: nbc_2020_articles.json  (+1 more)
docs/: high_level_project_report.md
scripts/: audit_normalized_bim.py  audit_unit.py  build_article_embeddings.py  build_unit_report.py  derive_constraints_from_articles.py  extract_article_chunks.py  extract_authority_chunks.py  ingest_ifc_to_bim.py  render_markdown_report_pdf.py  report_all_units.py  run_demo.py  translate_article_corpus.py
src/geometric_reasoner/: __init__.py  auditor.py  bim_normalized_models.py  cli.py  constraint_derivation.py  extraction.py  ifc_ingestion.py  llm_reasoner.py  pdf_reports.py  research.py  shared_data_models.py  vector_retrieval.py
tests/: test_auditor.py  test_ifc_ingestion.py  test_ifcopenshell_ingestion.py  test_normalized_auditor.py
(+229 files in other folders)
